--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@tailwindvue/tailwindvue": "^0.1.4",
@@ -15,11 +16,19 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-router": "~4.2.0",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-service": "~4.2.0",
+    "@vue/test-utils": "1.0.0-beta.31",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "jest": {
+    "preset": "@vue/cli-plugin-unit-jest",
+    "moduleNameMapper": {
+      "Views/(.*)$": "<rootDir>/src/views/$1"
+    }
+  }
 }
