--- a/amplify.yml
+++ b/amplify.yml
@@ -1,8 +1,6 @@
+version: 1.0
 test:
   phases:
-    preTest:
-      commands:
-        - yarn install
     test:
       commands:
         - yarn run build
