--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -19,10 +20,15 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
     "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-service": "~4.2.0",
     "@vue/test-utils": "1.0.0-beta.31",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "lint-staged": "^9.5.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
@@ -34,5 +40,14 @@
     "moduleNameMapper": {
       "Views/(.*)$": "<rootDir>/src/views/$1"
     }
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
